# simple-bar-server-go

./: .editorconfig  .gitignore  .golangci.yml  README.md  go.mod  lefthook.yml  main.go
internal/: app_badges.go  http_server.go  logging_middleware.go  websocket_map.go  websocket_server.go
python/: app_badges.py  pyproject.toml  requirements.txt  ruff.toml
